solved week 3 and 4

--- a/week_3/DAMI-Mod2.ipynb
+++ b/week_3/DAMI-Mod2.ipynb
@@ -29,6 +29,207 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create list baseball\n",
+    "baseball = [180, 215, 210, 210, 188, 176, 209, 200]\n",
+    "\n",
+    "# Import the numpy package as np\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create a numpy array from baseball: np_baseball\n",
+    "np_baseball = np.array(baseball)\n",
+    "\n",
+    "# Print out type of np_baseball\n",
+    "print(type(np_baseball))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'height' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-4493cef9dcc8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Create a numpy array from height: np_height\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mnp_height\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Print out np_height\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'height' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# height is available as a regular list\n",
+    "\n",
+    "# Import numpy\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create a numpy array from height: np_height\n",
+    "np_height = np.array(height)\n",
+    "\n",
+    "# Print out np_height\n",
+    "print(np_height)\n",
+    "\n",
+    "# Convert np_height to m: np_height_m\n",
+    "np_height_m = np_height * 0.0254\n",
+    "\n",
+    "# Print np_height_m\n",
+    "print(np_height_m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# height and weight are available as a regular lists\n",
+    "\n",
+    "# Import numpy\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create array from height with correct units: np_height_m\n",
+    "np_height_m = np.array(height) * 0.0254\n",
+    "\n",
+    "# Create array from weight with correct units: np_weight_kg\n",
+    "np_weight_kg = np.array(weight) * 0.453592\n",
+    "\n",
+    "# Calculate the BMI: bmi\n",
+    "bmi = np_weight_kg / np_height_m ** 2\n",
+    "\n",
+    "# Print out bmi\n",
+    "print(bmi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# height and weight are available as a regular lists\n",
+    "\n",
+    "# Import numpy\n",
+    "import numpy as np\n",
+    "\n",
+    "# Calculate the BMI: bmi\n",
+    "np_height_m = np.array(height) * 0.0254\n",
+    "np_weight_kg = np.array(weight) * 0.453592\n",
+    "bmi = np_weight_kg / np_height_m ** 2\n",
+    "\n",
+    "# Create the light array\n",
+    "light = bmi < 21\n",
+    "\n",
+    "# Print out light\n",
+    "print(light)\n",
+    "\n",
+    "# Print out BMIs of all baseball players whose BMI is below 21\n",
+    "print(bmi[light])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# baseball is available as a regular list of lists\n",
+    "\n",
+    "# Import numpy package\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create np_baseball (2 cols)\n",
+    "np_baseball = np.array(baseball)\n",
+    "\n",
+    "# Print out the 50th row of np_baseball\n",
+    "print(np_baseball[49,:])\n",
+    "\n",
+    "# Select the entire second column of np_baseball: np_weight\n",
+    "np_weight = np_baseball[:,1]\n",
+    "\n",
+    "# Print out height of 124th player\n",
+    "print(np_baseball[123:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# baseball is available as a regular list of lists\n",
+    "# updated is available as 2D numpy array\n",
+    "\n",
+    "# Import numpy package\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create np_baseball (3 cols)\n",
+    "np_baseball = np.array(baseball)\n",
+    "\n",
+    "# Print out addition of np_baseball and updated\n",
+    "print(np_baseball + updated)\n",
+    "\n",
+    "# Create numpy array: conversion\n",
+    "conversion = np.array([0.0254, 0.453592, 1])\n",
+    "\n",
+    "# Print out product of np_baseball and conversion\n",
+    "print(np_baseball * conversion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# heights and positions are available as lists\n",
+    "\n",
+    "# Import numpy\n",
+    "import numpy as np\n",
+    "\n",
+    "# Convert positions and heights to numpy arrays: np_positions, np_heights\n",
+    "np_positions = np.array(positions)\n",
+    "np_heights = np.array(heights)\n",
+    "\n",
+    "\n",
+    "# Heights of the goalkeepers: gk_heights\n",
+    "gk_heights = np_heights[np_positions == \"GK\"]\n",
+    "\n",
+    "# Heights of the other players: other_heights\n",
+    "other_heights = np_heights[np_positions != \"GK\"]\n",
+    "\n",
+    "# Print out the median height of goalkeepers. Replace 'None'\n",
+    "print(\"Median height of goalkeepers: \" + str(np.median(gk_heights)))\n",
+    "\n",
+    "# Print out the median height of other players. Replace 'None'\n",
+    "print(\"Median height of other players: \" + str(np.median(other_heights)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,6 +265,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a 3x3 matrix with values ranging from 0 to 8 (★☆☆)¶\n",
+    "import numpy as np\n",
+    "print(np.arange(9).reshape((3, 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0.58162728  0.61885252  0.42491777]\n",
+      "  [ 0.78625267  0.34717304  0.0587938 ]\n",
+      "  [ 0.82310615  0.43206933  0.97176742]]\n",
+      "\n",
+      " [[ 0.51970956  0.66475984  0.82857085]\n",
+      "  [ 0.55752093  0.44055957  0.32332143]\n",
+      "  [ 0.34659241  0.90782994  0.64366088]]\n",
+      "\n",
+      " [[ 0.44541459  0.3168294   0.13748557]\n",
+      "  [ 0.20133785  0.40054713  0.33185231]\n",
+      "  [ 0.06005038  0.62825772  0.61953168]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a 3x3x3 array with random values (★☆☆)\n",
+    "print(np.random.random(27).reshape((3, 3, 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('c', 'i1'), ('m', 'i1'), ('y', 'i1'), ('k', 'i1')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create a custom dtype that describes a color as four unsigned bytes (RGBA) (★☆☆)\n",
+    "print(np.dtype([(\"c\", np.int8), (\"m\", np.int8), (\"y\", np.int8), (\"k\", np.int8)]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,6 +359,22 @@
    "source": [
     "Finally I've created my own numpy dataset with randomized data. I'll use it to demonstrate my matplotlib visualization skills in the same fashion as has been done in the matplotlib chapter in the [Python Data Science Handbook](https://goo.gl/ay9Bqe)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises: numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
