more changes, I think these must be because of autosaves...?

--- a/week_5/DAMI-Mod4.ipynb
+++ b/week_5/DAMI-Mod4.ipynb
@@ -507,8 +507,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. evaluate the model by predicting the test set\n",
+    "[_describe how you are going to evaluate the results of your classifier and what it means_]\n",
+    "both in the same "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +529,7 @@
       "[2 1 2 2 1]\n",
       "Expected result:\n",
       "[2 2 2 2 2]\n",
-      "Percentage: 95.61828874675149\n",
+      "Percentage: 60.0\n",
       "\n",
       "\n",
       "Testing kernel type: rbf\n",
@@ -528,7 +537,7 @@
       "[2 1 2 2 1]\n",
       "Expected result:\n",
       "[2 2 2 2 2]\n",
-      "Percentage: 95.61828874675149\n",
+      "Percentage: 60.0\n",
       "\n",
       "\n",
       "Testing kernel type: poly\n",
@@ -536,7 +545,7 @@
       "[2 1 2 1 1]\n",
       "Expected result:\n",
       "[2 2 2 2 2]\n",
-      "Percentage: 94.38798074485389\n",
+      "Percentage: 40.0\n",
       "\n",
       "\n"
      ]
@@ -546,6 +555,19 @@
     "from sklearn.svm import SVC\n",
     "from scipy import spatial\n",
     "\n",
+    "def get_matching_percentage(list_1, list_2):\n",
+    "    if not len(list_1) == len(list_2):\n",
+    "        print(\"list lengths not matching\")\n",
+    "        return -1\n",
+    "    count = 0;\n",
+    "    correct_count = 0;\n",
+    "    for i in range(len(list_1)):\n",
+    "        count +=1\n",
+    "        if(list_1[i] == list_2[i]):\n",
+    "            correct_count +=1\n",
+    "    return 100 * (correct_count / count)\n",
+    "        \n",
+    "        \n",
     "model_types = [\"linear\", \"rbf\", \"poly\"]\n",
     "\n",
     "models = []\n",
@@ -561,17 +583,10 @@
     "    print(\"Expected result:\")\n",
     "    print(Y_test)\n",
     "    \n",
-    "    perc = 100 * (1 - spatial.distance.cosine(prediction, Y_test)) \n",
+    "    perc = get_matching_percentage(prediction, Y_test)\n",
+    "    #perc = 100 * (1 - spatial.distance.cosine(prediction, Y_test)) \n",
     "    print(\"Percentage: {}\".format(perc))\n",
     "    print(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5. evaluate the model by predicting the test set\n",
-    "[_describe how you are going to evaluate the results of your classifier and what it means_]"
    ]
   },
   {
