updated work for 6 and 7 (minor adjustments), added finished work for week 8

--- a/week_6/DAMI-Mod5-NB.ipynb
+++ b/week_6/DAMI-Mod5-NB.ipynb
@@ -563,7 +563,7 @@
    "metadata": {},
    "source": [
     "## Discussion of result\n",
-    "Given that only 69 per cent of the test data set were estimated correctly, the Naive Bayes classifier does not appear to be very good at recognising the "
+    "Given that only 69 per cent of the test data set were estimated correctly, the Naive Bayes classifier does not appear to be very good at recognising the different types of iris petals."
    ]
   },
   {
