--- a/week_7/DAMI-Mod6.ipynb
+++ b/week_7/DAMI-Mod6.ipynb
@@ -37,7 +37,7 @@
     "    X = rng.rand(N, 1) ** 2\n",
     "    # create target array from feature array\n",
     "    y = 10 - 1. / (X.ravel() + 0.1)\n",
-    "    # put some errors into the target array\n",
+    "    # put some errors (or rather uncertainty) into the target array\n",
     "    if err > 0:\n",
     "        y += err * rng.randn(N)\n",
     "    return X, y\n",
