updates and revisions

--- a/week_5/DAMI-Mod4.ipynb
+++ b/week_5/DAMI-Mod4.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Research question\n",
+    "## Research assignment\n",
     "In this research I want to analyse data representing flower petals to classify their special type"
    ]
   },
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "## Analysis\n",
-    "[_write a brief introduction to your analysis below. Briefly describe your classifier_]"
+    "For this analysis I will be using the Support Vector Machine. What this does (very simply put) is to attempt to draw a line between the sets of data belonging to different classes. When given new data to evaluate it will see on which side of this line the new data belongs which is then its class."
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -212,11 +212,11 @@
        "        1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
        "        2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
        "        2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]),\n",
-       " 'target_names': array(['setosa', 'versicolor', 'virginica'], \n",
+       " 'target_names': array(['setosa', 'versicolor', 'virginica'],\n",
        "       dtype='<U10')}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,6 +229,8 @@
     "# the loaded data is part of a learning library\n",
     "# it contains some test dataset describing flower petals which can be used to train an algorithm that should later\n",
     "# be able to classify new inputs and decide which specific type of flower it belongs to\n",
+    "\n",
+    "# printing contents of iris to get a rough overview\n",
     "iris"
    ]
   },
@@ -242,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +484,8 @@
     "\n",
     "from sklearn.cross_validation import train_test_split\n",
     "\n",
-    "# split X and Y into learn and test data\n",
+    "# split X and Y into learn and test data, random_state gives a seed to the splitting algorithm,\n",
+    "# train_size defines the distribution of test/ learning data\n",
     "X_learn, X_test, Y_learn, Y_test = train_test_split(X, Y, random_state=0, train_size=0.5)\n",
     "\n",
     "# importing libraries to visualize dataset as a first look\n",
@@ -507,7 +510,7 @@
    "metadata": {},
    "source": [
     "### 4. fit the model using the train set, applying the support vector machine\n",
-    "[_describe how you are going to fit the model and what model parameters you are using_]"
+    "see below, putting everything in one for loop was easier and more readable"
    ]
   },
   {
@@ -515,8 +518,11 @@
    "metadata": {},
    "source": [
     "### 5. evaluate the model by predicting the test set\n",
-    "[_describe how you are going to evaluate the results of your classifier and what it means_]\n",
-    "both in the same "
+    "since i split up the available data into a test- and training set in an earlier step, the easiest way to evaluate the results is to fit the learning data and to get a prediction for the test data afterwards. Using this, I can make a comparison between the predictions and the actual classes the petals belong to.\n",
+    "\n",
+    "Calculating the percentage of matches will yield the accuracy of the model.\n",
+    "\n",
+    "Since I used a for loop to evaluate different kernels for the same module, it is also interesting to see the difference between these results."
    ]
   },
   {
@@ -616,7 +622,11 @@
     "\n",
     "I expected the accuracy to be higher than this, there are a number of reasons for the low accuracy:\n",
     "\n",
-    "1) poorly split test data: I used the last 10 items on the list of items for testing. the dataset is split linearly, this means that the test items all belong to the same category and do not give a proper representation of the full data //UPDATE: splitting the data properly using train_test_split functionality yielded higher accuracy (72% for linear kernel) and different results for different kernel types"
+    "1) poorly split test data: I used the last 10 items on the list of items for testing. the dataset is split linearly, this means that the test items all belong to the same category and do not give a proper representation of the full data \n",
+    "\n",
+    "//UPDATE: splitting the data properly using train_test_split functionality yielded higher accuracy (72% for linear kernel) and different results for different kernel types\n",
+    "\n",
+    "2) insufficient data: while 150 data points may sound like a lot without any context, it is actually not very significant for a machine learning algorithm: I assume that, if we had several thousand of data points to train the algorithm on, a higher accuracy could be achieved."
    ]
   }
  ],
