--- a/week_6/DAMI-Mod5-NB.ipynb
+++ b/week_6/DAMI-Mod5-NB.ipynb
@@ -496,7 +496,7 @@
    "metadata": {},
    "source": [
     "### 4. fit the model using the train set, applying the naive Bayes classifier\n",
-    "[_describe how you are going to fit the model and what model parameters you are using_]"
+    "Since the Naive Bayes implementation of scikit learn does not support parameterising the model with anything else than the actual training set, no modifications have been made. This is one of the reasons that the NB model is often useful to quickly get an overview over data but may yield lower accuracy than more complex models."
    ]
   },
   {
@@ -504,7 +504,7 @@
    "metadata": {},
    "source": [
     "### 5. evaluate the model by predicting the test set\n",
-    "[_describe how you are going to evaluate the results of your classifier and what it means_]"
+    "After fitting the data, the model can be used to obtain predictions of the classes of Iris flowers the test set contains. Comparing these classes with the actual values of them described in the class columns of the data set yields the accuracy with which the model can classify the flowers."
    ]
   },
   {
@@ -563,7 +563,7 @@
    "metadata": {},
    "source": [
     "## Discussion of result\n",
-    "Given that only 69 per cent of the test data set were estimated correctly, the Naive Bayes classifier does not appear to be very good at recognising the different types of iris petals."
+    "Given that only 69 per cent of the test data set were estimated correctly, the Naive Bayes classifier does not appear to be very good at recognising the different types of iris petals. However this was to be expected as the general consensus in forums and guides seemed to be that using a Naive Bayes Classifier was useful for quick overviews but not so much for deeper, more accurate analysis."
    ]
   },
   {
@@ -571,7 +571,9 @@
    "metadata": {},
    "source": [
     "## Comparison of classifiers\n",
-    "[_reflect on the preferred choice of classifier now that you've used SVM, DT and NB classifiers in terms of __bias__ and __variance__ of the applied classifiers_]"
+    "Using this data set and with the limited knowledge and experience at my hands, the Support Vector Machine performed slightly better at recognising iris flowers than the Naive Bayes Classifier.\n",
+    "\n",
+    "As discussed above, this seems to be a tradeoff made for the speed and simplicity of the model."
    ]
   }
  ],
